--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -15,17 +16,17 @@
             </a>
             <ul class="site-nav list"> 
                 <li>
-                    <a href="">
+                    <a href="" class="link">
                         Студия
                     </a>
                 </li>
                 <li>
-                    <a href="./portfolio.html">
+                    <a href="./portfolio.html" class="link">
                         Портфолио
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="link">
                         Контакты
                     </a>
                 </li>
@@ -45,11 +46,11 @@
         </ul>  
     </header>
     <main>
-        <section class="hero">
+        <section class="section hero">
             <h1 class="hero-title">
-                Эффективные решения для вашего бизнеса
+                Эффективные решения <br> для вашего бизнеса
             </h1>
-            <button type="button" class="button primary">
+            <button type="button" class="button secondary">
                 Заказать услугу
             </button>
         </section>
@@ -57,34 +58,34 @@
             <h2>Наши преимущества</h2>
             <ul class="list">
                 <li>
-                    <h3 class="section-title">
+                    <h3 class="benefits-title">
                         Внимание к деталям
                     </h3>
-                    <p>
+                    <p class="portfolio-description">
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>    
                 </li>
                 <li>
-                    <h3 class="section-title">
+                    <h3 class="benefits-title">
                         Пунктуальность
                     </h3>
-                    <p>
+                    <p class="portfolio-description">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
-                    <h3 class="section-title">
+                    <h3 class="benefits-title">
                         Планирование
                     </h3>
-                    <p>
+                    <p class="portfolio-description">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <h3 class="section-title">
+                    <h3 class="benefits-title">
                         Современные технологии
                     </h3>
-                    <p>
+                    <p class="portfolio-description">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
@@ -106,44 +107,44 @@
                 </li>
             </ul>
         </section>
-        <section class="section">
+        <section class="section team">
             <h2 class="section-title">
                 Наша команда
             </h2>
             <ul class="list">
                 <li>
                     <img src="./images/img4.jpg" alt="картинка4" width="270">
-                    <h3>
+                    <h3 class="team-title">
                         Игорь Демьяненко
                     </h3>
-                    <p>
+                    <p class="team-description">
                         Product Designer
                     </p>
                 </li>
                 <li>
                     <img src="./images/img5.jpg" alt="картинка5" width="270">
-                    <h3>
+                    <h3 class="team-title">
                         Ольга Репина
                     </h3>
-                    <p>
+                    <p class="team-description">
                         Frontend Developer
                     </p>
                 </li>
                 <li>
                     <img src="./images/img6.jpg" alt="картинка6" width="270">
-                    <h3>
+                    <h3 class="team-title">
                         Николай Тарасов
                     </h3>
-                    <p>
+                    <p class="team-description">
                         Marketing
                     </p>
                 </li>
                 <li>
                     <img src="./images/img7.jpg" alt="картинка7" width="270">
-                    <h3>
+                    <h3 class="team-title">
                         Михаил Ермаков
                     </h3>
-                    <p>
+                    <p class="team-description">
                         UI Designer
                     </p>
                 </li>
@@ -151,15 +152,15 @@
         </section>
     </main>
     <footer>
-        <a href="">
+        <a href="" class="logo inverse">
             <span>Web</span>Studio
         </a>
         <address>
-            <ul class="list">
+            <ul class="contacts-footer list">
                 <li>
-                    <a href="">
+                    <a href="" class="address">
                         г. Киев, пр-т Леси Украинки, 26
-                    <a>
+                    </a>
                 </li>
                 <li>
                     <a href="mailto:info@example.com">
