--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,172 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width>, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>Страница портфолио</h1>
+    <header>
+      <nav>
+        <a href="" class="logo"> Web<span>Studio</span> </a>
+        <ul class="site-nav list">
+          <li>
+            <a href="./index.html" class="link"> Студия </a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="link current"> Портфолио </a>
+          </li>
+          <li>
+            <a href="" class="link"> Контакты </a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="contacts list">
+        <li>
+          <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
+        </li>
+        <li>
+          <a href="tel:+380961111111"> +38 096 111 11 11 </a>
+        </li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <h1>Портфолио</h1>
+        <div class="filter">
+          <button type="button" class="button primary active">Все</button>
+          <button type="button" class="button primary">Веб-сайти</button>
+          <button type="button" class="button primary">Приложения</button>
+          <button type="button" class="button primary">Дизайн</button>
+          <button type="button" class="button primary">Маркетинг</button>
+        </div>
+        <ul class="list">
+          <li>
+            <a>
+              <img src="./images/img8.jpg" alt="картинка8" width="370" />
+              <h2 class="portfolio-title">Технокряк</h2>
+              <p class="portfolio-description">Веб-сайт</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
+                facere ipsam laborum id earum iste similique, ratione labore.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./images/img9.jpg" alt="картинка8" width="370" />
+              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio-description">Дизайн</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
+                facere ipsam laborum id earum iste similique, ratione labore.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./images/img10.jpg" alt="картинка8" width="370" />
+              <h2 class="portfolio-title">Ресторан Seafood</h2>
+              <p class="portfolio-description">Приложение</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
+                facere ipsam laborum id earum iste similique, ratione labore.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./images/img11.jpg" alt="картинка8" width="370" />
+              <h2 class="portfolio-title">Проект Prime</h2>
+              <p class="portfolio-description">Маркетинг</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
+                facere ipsam laborum id earum iste similique, ratione labore.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./images/img12.jpg" alt="картинка8" width="370" />
+              <h2 class="portfolio-title">Проект Boxes</h2>
+              <p class="portfolio-description">Приложение</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
+                facere ipsam laborum id earum iste similique, ratione labore.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./images/img13.jpg" alt="картинка8" width="370" />
+              <h2 class="portfolio-title">Inspiration has no Borders</h2>
+              <p class="portfolio-description">Веб-сайт</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
+                facere ipsam laborum id earum iste similique, ratione labore.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./images/img14.jpg" alt="картинка8" width="370" />
+              <h2 class="portfolio-title">Издание Limited Edition</h2>
+              <p class="portfolio-description">Дизайн</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
+                facere ipsam laborum id earum iste similique, ratione labore.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./images/img15.jpg" alt="картинка8" width="370" />
+              <h2 class="portfolio-title">Проект LAB</h2>
+              <p class="portfolio-description">Маркетинг</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
+                facere ipsam laborum id earum iste similique, ratione labore.
+              </p>
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="./images/img16.jpg" alt="картинка8" width="370" />
+              <h2 class="portfolio-title">Growing Business</h2>
+              <p class="portfolio-description">Приложение</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
+                facere ipsam laborum id earum iste similique, ratione labore.
+              </p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+        <a href="" class="logo inverse">
+            <span>Web</span>Studio
+        </a>
+        <address>
+            <ul class="contacts-footer list">
+                <li>
+                    <a href="" class="address">
+                        г. Киев, пр-т Леси Украинки, 26
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:info@example.com">
+                        info@example.com
+                    </a>
+                </li>
+                <li>
+                    <a href="tel:+380991111111">
+                        +38 099 111 11 11
+                    </a>
+                </li>
+        </address>
+    </footer>
   </body>
 </html>
