bg-color white, current page, p font-size 14, correct footer, correct porfolio buttons,

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </a>
             <ul class="site-nav list"> 
                 <li>
-                    <a href="" class="link">
+                    <a href="" class="link current">
                         Студия
                     </a>
                 </li>
@@ -61,7 +61,7 @@
                     <h3 class="benefits-title">
                         Внимание к деталям
                     </h3>
-                    <p class="portfolio-description">
+                    <p>
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>    
                 </li>
@@ -69,7 +69,7 @@
                     <h3 class="benefits-title">
                         Пунктуальность
                     </h3>
-                    <p class="portfolio-description">
+                    <p class="benefits-description">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
@@ -77,7 +77,7 @@
                     <h3 class="benefits-title">
                         Планирование
                     </h3>
-                    <p class="portfolio-description">
+                    <p class="benefits-description">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
@@ -85,7 +85,7 @@
                     <h3 class="benefits-title">
                         Современные технологии
                     </h3>
-                    <p class="portfolio-description">
+                    <p class="benefits-description">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
@@ -107,7 +107,7 @@
                 </li>
             </ul>
         </section>
-        <section class="section team">
+        <section class="section">
             <h2 class="section-title">
                 Наша команда
             </h2>
@@ -163,12 +163,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:info@example.com">
+                    <a href="mailto:info@example.com" class="mail">
                         info@example.com
                     </a>
                 </li>
                 <li>
-                    <a href="tel:+380991111111">
+                    <a href="tel:+380991111111" class="phone">
                         +38 099 111 11 11
                     </a>
                 </li>
