--- a/portfolio.html
+++ b/portfolio.html
@@ -39,20 +39,30 @@
     <main>
       <section>
         <h1>Портфолио</h1>
-        <div class="filter">
-          <button type="button" class="button primary active">Все</button>
-          <button type="button" class="button primary">Веб-сайти</button>
-          <button type="button" class="button primary">Приложения</button>
-          <button type="button" class="button primary">Дизайн</button>
-          <button type="button" class="button primary">Маркетинг</button>
-        </div>
+        <ul class="filter list">
+          <li>
+            <button type="button" class="button primary active">Все</button>
+          </li>
+          <li>
+            <button type="button" class="button primary">Веб-сайти</button>
+          </li>
+          <li>
+            <button type="button" class="button primary">Приложения</button>
+          </li>
+          <li>
+            <button type="button" class="button primary">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="button primary">Маркетинг</button>
+          </li>
+        </ul>
         <ul class="list">
           <li>
             <a>
               <img src="./images/img8.jpg" alt="картинка8" width="370" />
               <h2 class="portfolio-title">Технокряк</h2>
               <p class="portfolio-description">Веб-сайт</p>
-              <p>
+              <p class="portfolio-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
                 facere ipsam laborum id earum iste similique, ratione labore.
               </p>
@@ -63,7 +73,7 @@
               <img src="./images/img9.jpg" alt="картинка8" width="370" />
               <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
               <p class="portfolio-description">Дизайн</p>
-              <p>
+              <p class="portfolio-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
                 facere ipsam laborum id earum iste similique, ratione labore.
               </p>
@@ -74,7 +84,7 @@
               <img src="./images/img10.jpg" alt="картинка8" width="370" />
               <h2 class="portfolio-title">Ресторан Seafood</h2>
               <p class="portfolio-description">Приложение</p>
-              <p>
+              <p class="portfolio-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
                 facere ipsam laborum id earum iste similique, ratione labore.
               </p>
@@ -85,7 +95,7 @@
               <img src="./images/img11.jpg" alt="картинка8" width="370" />
               <h2 class="portfolio-title">Проект Prime</h2>
               <p class="portfolio-description">Маркетинг</p>
-              <p>
+              <p class="portfolio-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
                 facere ipsam laborum id earum iste similique, ratione labore.
               </p>
@@ -96,7 +106,7 @@
               <img src="./images/img12.jpg" alt="картинка8" width="370" />
               <h2 class="portfolio-title">Проект Boxes</h2>
               <p class="portfolio-description">Приложение</p>
-              <p>
+              <p class="portfolio-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
                 facere ipsam laborum id earum iste similique, ratione labore.
               </p>
@@ -107,7 +117,7 @@
               <img src="./images/img13.jpg" alt="картинка8" width="370" />
               <h2 class="portfolio-title">Inspiration has no Borders</h2>
               <p class="portfolio-description">Веб-сайт</p>
-              <p>
+              <p class="portfolio-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
                 facere ipsam laborum id earum iste similique, ratione labore.
               </p>
@@ -118,7 +128,7 @@
               <img src="./images/img14.jpg" alt="картинка8" width="370" />
               <h2 class="portfolio-title">Издание Limited Edition</h2>
               <p class="portfolio-description">Дизайн</p>
-              <p>
+              <p class="portfolio-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
                 facere ipsam laborum id earum iste similique, ratione labore.
               </p>
@@ -129,7 +139,7 @@
               <img src="./images/img15.jpg" alt="картинка8" width="370" />
               <h2 class="portfolio-title">Проект LAB</h2>
               <p class="portfolio-description">Маркетинг</p>
-              <p>
+              <p class="portfolio-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
                 facere ipsam laborum id earum iste similique, ratione labore.
               </p>
@@ -140,7 +150,7 @@
               <img src="./images/img16.jpg" alt="картинка8" width="370" />
               <h2 class="portfolio-title">Growing Business</h2>
               <p class="portfolio-description">Приложение</p>
-              <p>
+              <p class="portfolio-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur corporis
                 facere ipsam laborum id earum iste similique, ratione labore.
               </p>
